<resources>

    <string name="app_name">Foodie App</string>
    <!--    HomeActivity -->
    <string name="verRestaurantes">Ver Restaurantes</string>
    <string name="SoyUnRestaurante">Soy un restaurante</string>
    <string name="descripcion_logo_foodie">Logo Foodie</string>
    <string name="descripcion_imagen_foodie">Imagen Foodie</string>
    <!--    HomeActivity -->
    <!--    LoginActivity -->
    <string name="email">Email</string>
    <string name="no_tengo_cuenta">No tengo cuenta</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <!--    LoginActivity -->


    <!--    RegisterActivity -->
    <string name="crearcuenta">¡Crear Cuenta!</string>
    <string name="imagenperfil">imagenperfil</string>
    <string name="webpage">Webpage</string>
    <string name="restaurantename">Restaurant Name</string>
    <string name="descripcion">Description</string>
    <string name="location">Location</string>
    <!--    RegisterActivity -->

    <!--    Forms -->
    <string name="firstcourse">First Course</string>
    <string name="secondcourse">Second Course</string>
    <string name="dessert">Dessert</string>
    <string name="beverage">Beverage</string>
    <string name="starter">Starter</string>
    <string name="menuname">Menu Name</string>
    <string name="price">Price</string>
    <!--    Forms -->
    <!--    CreateMenuActivity -->
    <string name="añadirmenu">¡Añadir Menu!</string>
    <string name="crearmenu">Create Menu</string>
    <!--    CreateMenuActivity -->


    <!--    EditMenuActivity -->
    <string name="actualizarmenu">¡Actualizar Menu!</string>
    <string name="editmenu">Edit Menu</string>
    <string name="actualizar">¡Actualizar!</string>
    <!--    EditMenuActivity -->
    <!--    EditAccountActivity -->
    <string name="editaccount">Edit Account</string>
    <!--    EditAccountActivity -->

    <string name="your_menus_text">Your Menus Text</string>
    <string name="password">Password</string>
    <string name="imgallende">imgallende</string>
    <string name="mymenus">Mis Menús</string>
    <string name="detallemenu1">DetalleMenu1</string>
    <string name="menu1">Menu 1</string>
    <!--    Nav -->
    <string name="Inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="menu">Mis Menús</string>
    <string name="salir">Cerrar Sesión</string>
    <!--    Nav -->

    <!--    MenuDetailActivity -->
    <string name="datos">Datos</string>
    <string name="emailallende">Correo: mirestaurante@allende.com</string>
    <string name="nombre_allende">Nombre: Allende</string>
    <string name="passwordallende">Contraseña: ********</string>
    <string name="allendeDescripcion">Descripción: Restaurante de comida mediterránea</string>
    <!--    MenuDetailActivity -->

    <string name="añadirImagen">Selecciona Imagen</string>
    <string name="addImagen">Añadir Imagen</string>
    <string name="register">Register</string>
    <string name="registertxt">registerTxt</string>
    <string name="logoimage">logoImage</string>
    <string name="logoURL">Logo URL</string>
    <string name="imagenURL">Imagen URL</string>
    <string name="logo">Logo</string>
    <string name="menu_imagen">menu Imagen</string>
    <string name="icono_editar">icono editar</string>
    <string name="icono_eliminar">icono eliminar</string>
    <string name="nombre">Nombre</string>
    <string name="restaurante_imagen">restaurante imagen</string>
    <string name="Nombre">Nombre:</string>
    <string name="icono_ubicacion">icono ubicacion</string>
    <string name="icono_internet">icono internet</string>
    <string name="fab_add">fab añadir</string>
    <string name="_1">1€</string>
    <string name="agua">Agua</string>
    <string name="sopa_de_pollo">Sopa de pollo</string>
    <string name="costilla_de_cerdo">Costilla de cerdo</string>
    <string name="papas_arrugadas_con_mojo">Papas arrugadas con mojo</string>
    <string name="postre">Postre</string>
    <string name="bebida">Bebida</string>
    <string name="brownie">Brownie</string>
    <string name="edit_menu_texto">edit menu texto</string>
    <string name="edit_account_text">edit account text</string>
    <string name="create_menu_text">create menu text</string>
    <string name="Correo">Email:</string>
    <string name="Password">Contraseña:</string>
    <string name="Descripcion">Description:</string>
    <string name="fab_edit_account">fab edit account</string>
    <string name="imagen">Imagen</string>


</resources>