<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/firstCourse"
        android:layout_width="339dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_redondo"
        android:ems="10"
        android:inputType="textPersonName|textEmailAddress"
        android:text="@string/firstcourse"
        android:textColor="#FDFCFC"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starter" />

    <EditText
        android:id="@+id/secondcourse"
        android:layout_width="339dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_redondo"
        android:ems="10"
        android:inputType="textPersonName|textEmailAddress"
        android:text="@string/secondcourse"
        android:textColor="#FDFCFC"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstCourse" />

    <EditText
        android:id="@+id/dessert"
        android:layout_width="339dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_redondo"
        android:ems="10"
        android:inputType="textPersonName|textEmailAddress"
        android:text="@string/dessert"
        android:textColor="#FDFCFC"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondcourse" />

    <EditText
        android:id="@+id/beverage"
        android:layout_width="339dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_redondo"
        android:ems="10"
        android:inputType="textPersonName|textEmailAddress"
        android:text="@string/beverage"
        android:textColor="#FDFCFC"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dessert" />

    <EditText
        android:id="@+id/price"
        android:layout_width="339dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_redondo"
        android:ems="10"
        android:inputType="textPersonName|textEmailAddress"
        android:text="@string/price"
        android:textColor="#FDFCFC"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuName" />

    <EditText
        android:id="@+id/starter"
        android:layout_width="339dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_redondo"
        android:ems="10"
        android:inputType="textPersonName|textEmailAddress"
        android:text="@string/starter"
        android:textColor="#FDFCFC"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <Button
        android:id="@+id/btnAñadirMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/btn_redondo"
        android:text="@string/añadirmenu"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="163dp"
        android:layout_height="105dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/imagenperfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/menu" />

    <EditText
        android:id="@+id/menuName"
        android:layout_width="339dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_redondo"
        android:ems="10"
        android:inputType="textPersonName|textEmailAddress"
        android:text="@string/menuname"
        android:textColor="#FDFCFC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="198dp"
        android:layout_height="63dp"
        android:layout_marginTop="32dp"
        android:text="@string/crearmenu"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>